--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular2-text-mask": "^9.0.0",
     "ng-brazil": "^2.4.5",
     "ngx-custom-validators": "^9.1.0",
+    "ngx-spinner": "^9.0.2",
     "ngx-toastr": "^12.0.1",
     "rxjs": "~6.5.4",
     "text-mask-addons": "^3.8.0",
